// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core drop down Can render custom value 1`] = `
<div>
  <div
    class="dropdown-container"
  >
    <span
      class="dropdown-selector"
      data-cy="-dropdown"
    >
      <div
        class="bp5-html-select"
      >
        <select
          style="min-width: 120px; width: 120px;"
          title="undefined"
        >
          <option
            value="test"
          >
            Test
          </option>
          <option
            value="foo"
          >
            Foo
          </option>
          <option
            value="bar"
          >
            Bar
          </option>
          <option
            value="UNSELECTED_CUSTOM_VALUE"
          >
            Custom
          </option>
        </select>
        <span
          class="bp5-icon bp5-icon-double-caret-vertical"
        >
          <svg
            data-icon="double-caret-vertical"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              Open dropdown
            </title>
            <path
              d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
              fill-rule="evenodd"
              transform="scale(0.05, -0.05) translate(-160, -160)"
              transform-origin="center"
            />
          </svg>
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`Core drop down Renders with disable dropdown options 1`] = `
<div>
  <div
    class="dropdown-container"
  >
    <span
      class="dropdown-selector"
      data-cy="-dropdown"
    >
      <div
        class="bp5-html-select"
      >
        <select
          style="min-width: 120px; width: 120px;"
          title="undefined"
        >
          <option
            disabled=""
            value="test"
          >
            test
          </option>
          <option
            value="foo"
          >
            foo
          </option>
          <option
            value="bar"
          >
            bar
          </option>
        </select>
        <span
          class="bp5-icon bp5-icon-double-caret-vertical"
        >
          <svg
            data-icon="double-caret-vertical"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              Open dropdown
            </title>
            <path
              d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
              fill-rule="evenodd"
              transform="scale(0.05, -0.05) translate(-160, -160)"
              transform-origin="center"
            />
          </svg>
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`Core drop down Renders with label 1`] = `
<div>
  <div
    class="dropdown-container"
  >
    <span
      class="dropdown-label"
    >
      best label ever: 
    </span>
    <span
      class="dropdown-selector"
      data-cy="best-label-ever-dropdown"
    >
      <div
        class="bp5-html-select"
      >
        <select
          style="min-width: 120px; width: 120px;"
          title="undefined"
        >
          <option
            value="test"
          >
            test
          </option>
          <option
            value="foo"
          >
            foo
          </option>
          <option
            value="bar"
          >
            bar
          </option>
        </select>
        <span
          class="bp5-icon bp5-icon-double-caret-vertical"
        >
          <svg
            data-icon="double-caret-vertical"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              Open dropdown
            </title>
            <path
              d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
              fill-rule="evenodd"
              transform="scale(0.05, -0.05) translate(-160, -160)"
              transform-origin="center"
            />
          </svg>
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`Core drop down Renders without label 1`] = `
<div>
  <div
    class="dropdown-container"
  >
    <span
      class="dropdown-selector"
      data-cy="best-label-ever-dropdown"
    >
      <div
        class="bp5-html-select"
      >
        <select
          style="min-width: 120px; width: 120px;"
          title="undefined"
        >
          <option
            value="test"
          >
            test
          </option>
          <option
            value="foo"
          >
            foo
          </option>
          <option
            value="bar"
          >
            bar
          </option>
        </select>
        <span
          class="bp5-icon bp5-icon-double-caret-vertical"
        >
          <svg
            data-icon="double-caret-vertical"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              Open dropdown
            </title>
            <path
              d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
              fill-rule="evenodd"
              transform="scale(0.05, -0.05) translate(-160, -160)"
              transform-origin="center"
            />
          </svg>
        </span>
      </div>
    </span>
  </div>
</div>
`;
